# gtm

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: bq-analyst.md  data-validator.md  firestore-explorer.md  gtm-auditor.md  gtm-engineer.md  gtm-explorer.md  gtm-jira.md  gtm-versioner.md  sgtm-template-manager.md  spec-writer.md
.claude/commands/: bq-query.md  bq-schema.md  data-check.md  firestore-browse.md  firestore-stats.md  ga4-report.md  gtm-audit.md  gtm-backup.md  gtm-dev.md  gtm-explore.md  gtm-jira.md  gtm-spec.md  gtm-tag.md  gtm-version.md
.claude/memory/: MEMORY.md  feedback_always_use_prs.md  feedback_bq_source_of_truth.md  feedback_commit_claude_memory.md  feedback_debug_logging_sgtm.md  feedback_fetch_remote.md  feedback_firestore_readonly.md  feedback_gtm_conventions_analysis.md  feedback_sgtm_template_patterns.md  feedback_spec_workflow.md  feedback_testing_with_firestore_data.md  project_scoring_model_v4.md  reference_github_auth.md  reference_gtm_account.md  reference_gtm_api_types.md  reference_jira_api_fallback.md  reference_jira_data_project.md  reference_jira_transitions.md  user_role.md
.claude/templates/: audit-report-template.md  bq-query-template.md  change-request-template.md  data-validation-report.md  firestore-enrichment-spec.md  tag-spec-template.md
.github/workflows/: backup.yml  lint-test.yml
specs/: gads-scoring-value.md  test-cases-scoring.md
src/gtm/: __init__.py  bigquery_client.py  cli.py  client.py  firestore_client.py  mcp_server.py  (+1 more)
tests/: conftest.py  test_models.py
(+31 files in other folders)
